// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PersonBadge /> Renders a large PersonBadge with initials, using a URL for the image and a custom class named 1`] = `
<span
  className="Skeleton exampleClass skeleton circle skeleton-large"
  style={
    Object {
      "width": undefined,
    }
  }
/>
`;

exports[`<PersonBadge /> Renders a large PersonBadge with initials, using imageData 1`] = `
<span
  className="Skeleton skeleton circle skeleton-large"
  style={
    Object {
      "width": undefined,
    }
  }
/>
`;

exports[`<PersonBadge /> Renders a large PersonBadge with initials, with hover effect and overlay 1`] = `
<span
  className="Skeleton skeleton circle skeleton-large"
  style={
    Object {
      "width": undefined,
    }
  }
/>
`;

exports[`<PersonBadge /> Renders a medium PersonBadge with initials and a long term leave circle 1`] = `
<span
  className="Skeleton skeleton circle skeleton-medium"
  style={
    Object {
      "width": undefined,
    }
  }
/>
`;

exports[`<PersonBadge /> Renders a small PersonBadge with initials, with hover effect but no overlay 1`] = `
<span
  className="Skeleton skeleton circle skeleton-small"
  style={
    Object {
      "width": undefined,
    }
  }
/>
`;

exports[`<PersonBadge /> Renders an xlarge PersonBadge with initials 1`] = `
<span
  className="Skeleton skeleton circle skeleton-xlarge"
  style={
    Object {
      "width": undefined,
    }
  }
/>
`;
